add dependency to pytest

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ dependencies:
   - networkx=1.11
   - xgboost=0.6a2
   - lightgbm=2.0.4
+  - logilab-common
   - pip:
     - hyperopt==0.1
     - pymongo==3.4.0
