--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,11 @@ dependencies:
   - networkx=1.11
   - xgboost=0.6a2
   - lightgbm=2.0.4
-  - pytest=3.2.1
   - pip:
     - hyperopt==0.1
     - pymongo==3.4.0
     - pyyaml==3.12
     - scikit-optimize==0.4
+    - pytest>=3.2.1
 script: 
   - pytest
