--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,4 @@
 language: python3
-python:
-  - "3.6"
-sudo: required
-dist: trusty
 install:
   - gem install rake
 channels:
@@ -18,6 +14,6 @@ dependencies:
   - xgboost=0.6a2
   - lightgbm=2.0.4
 install:
-  - pip3.6 install -r requirements.txt
+  - pip install -r requirements.txt
 script: 
   - pytest
