--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ dependencies:
   - xgboost=0.6a2
   - lightgbm=2.0.4
 install:
-  - git clone ^^recursive https://github.com/Microsoft/LightGBM
+  - git clone --recursive https://github.com/Microsoft/LightGBM
   - cd LightGBM
   - git checkout 80c641cd17727bebea613af3cbfe3b985dbd3313
   - mkdir build && cd build && cmake -DUSE_MPI=ON ..
@@ -25,7 +25,7 @@ install:
   - cd ../../
   - rm -rf LightGBM
 
-  - git clone ^^recursive https://github.com/dmlc/xgboost
+  - git clone --recursive https://github.com/dmlc/xgboost
   - cd xgboost
   - git checkout 14fba01b5ac42506741e702d3fde68344a82f9f0
   - make -j
