--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ dependencies:
   - lightgbm=2.0.4
 install:
   - gem install rake
-  - pip3 install jupyter pyyaml hyperopt scikit-optimize pandas networkx==1.11
+  - pip install --upgrade setuptools
+  - pip3 install numpy jupyter pyyaml hyperopt scikit-optimize pandas networkx==1.11
   - git clone --recursive https://github.com/Microsoft/LightGBM
   - cd LightGBM
   - git checkout 80c641cd17727bebea613af3cbfe3b985dbd3313
