--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python3
 sudo: required
 before_install:
-  - pip3 install virtualenv
+  - pip install virtualenv
   - python3 -m venv venv
   - source venv/bin/activate
   - pip3 install jupyter pyyaml hyperopt scikit-optimize pandas networkx==1.11    
