--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: python3
 sudo: required
 before_install:
-  - pip install virtualenv
-  - python3 -m venv venv
+  - sudo apt-get install python3-venv
+  - python3 -m venv venv 
   - source venv/bin/activate
   - pip3 install jupyter pyyaml hyperopt scikit-optimize pandas networkx==1.11    
 install:
