--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python3
 sudo: required
 before_install:
-  - sudo apt-get install python3-venv
+  - pyenv global system 3.6
   - python3 -m venv venv 
   - source venv/bin/activate
   - pip3 install jupyter pyyaml hyperopt scikit-optimize pandas networkx==1.11    
