--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ virtualenv:
   system_site_packages: true
 before_install:
   - pyenv global system 3.6
-  - pip3 install jupyter pyyaml hyperopt scikit-optimize pandas networkx==1.11    
+  - pip3 install numpy scipy jupyter pyyaml hyperopt scikit-optimize pandas networkx==1.11    
 install:
   - pip3 install .
   - gem install rake
