--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ virtualenv:
 before_install:
   - pyenv global system 3.6
 install:
+  - sudo pip install .
   - sudo pip install -r requirements.txt
 script: 
   - pytest
