--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ virtualenv:
 before_install:
   - pyenv global system 3.6
 install:
-  - sudo pip install .
-  - sudo pip install -r requirements.txt
+  - sudo pip3 install .
+  - sudo pip3 install -r requirements.txt
 script: 
   - pytest
