--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
-language: python3
-virtualenv:
-  system_site_packages: true
-before_install:
-  - pyenv global system 3.6
+language: python
+python:
+  - "3.6"
 install:
-  - sudo apt-get install python3-pip
-  - sudo pip3 install -r requirements.txt
+  - sudo pip install -r requirements.txt
 script: 
   - pytest
