--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ before_install:
   - git clone https://github.com/yandexdataschool/modelgym.git
   - cd ./modelgym
   - docker pull modelgym/dockers 
-  - docker run -ti --rm  -v "$(pwd)":/src  -p 7777:8888    modelgym/dockers:latest  bash --login -ci "pip install catboost networkx==1.11 &&  pytest"
+  - docker run -ti --rm  -v "$(pwd)":/src  -p 7777:8888    modelgym/dockers:latest  bash --login -ci "cd src/ pip install catboost networkx==1.11 &&  pytest"
 
