--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
 before_install:
   - mkdir test
   - cd test
-  - git clone https://github.com/yandexdataschool/modelgym.git
+  - git clone https://github.com/sergmiller/modelgym.git
   - cd ./modelgym
   - docker pull modelgym/dockers 
   - docker run -ti --rm  -v "$(pwd)":/src  -p 7777:8888    modelgym/dockers:latest  bash --login -ci "cd src/ pip install catboost networkx==1.11 &&  pytest"
