--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: python
 
+before_install:
+  - mkdir test
+  - cd test
+
 install:
   - git clone -b make_modelgym_great_again https://github.com/fminkin/modelgym.git
   - cd ./modelgym
